# Elina_5sem

./: .gitignore  BenMahr_GaussLegendreIntegral.cpp  README.md  a.out  factory_method.cpp  meta_primes.cpp
Celestial mechanics/celestial_mechanics/: CMakeLists.txt  CMakePresets.json  main.cpp
Celestial mechanics/celestial_mechanics/resources/: README.md  time_2019_2020_result.hpp
Celestial mechanics/celestial_mechanics/src/: CMakeLists.txt
Celestial mechanics/celestial_mechanics/src/celestial_mechanics/: AccelerationCalculator.hpp  Interpolation.hpp
Celestial mechanics/celestial_mechanics/src/celestial_mechanics/coordinates/: EOPContainer.cpp  EOPContainer.hpp  ReferenceSystemConverter.hpp
Celestial mechanics/celestial_mechanics/src/celestial_mechanics/forces/: AtmosphericDrag.hpp  EarthGravity.hpp  Eternal.cpp  Eternal.hpp  Evig.hpp  GOST4401_81.cpp  GOST4401_81.hpp  SolarRadiationPressure.cpp  SolarRadiationPressure.hpp  TSIcontainer.cpp  TSIcontainer.hpp
Celestial mechanics/celestial_mechanics/src/celestial_mechanics/time/: DutContainer.cpp  DutContainer.hpp  Exception.hpp  Interpolation.hpp  Time.hpp  TimeConverter.cpp  TimeConverter.hpp
Celestial mechanics/celestial_mechanics/src/time/: DutContainer.cpp  Interpolation.hpp  Time.cpp  Time.hpp  exception.cpp
Celestial mechanics/celestial_mechanics/tests/: CMakeLists.txt  Paths.hpp  test_1.cpp  test_2.cpp
Celestial mechanics/celestial_mechanics/tests/coordinates/: test_6.cpp  test_7.cpp
Celestial mechanics/celestial_mechanics/tests/forces/: test_7.cpp
Celestial mechanics/celestial_mechanics/tests/time/: test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp
Celestial mechanics/example_cmake_project/: CMakeLists.txt  main.cpp
Celestial mechanics/example_cmake_project/src/: CMakeLists.txt
Celestial mechanics/example_cmake_project/src/double_sin/: DoubleSin.cpp  DoubleSin.hpp
Celestial mechanics/example_cmake_project/tests/: CMakeLists.txt  test_1.cpp  test_2.cpp
Celestial mechanics/example_cmake_project/third party/: CMakeLists.txt
Celestial mechanics/example_cmake_project/third party/calculator/src/: CMakeLists.txt
Celestial mechanics/example_cmake_project/third party/calculator/src/calculator/: Calculator.cpp  Calculator.hpp
Celestial mechanics/example_gravity/: CMakeLists.txt  main.cpp
Celestial mechanics/time/: CMakeLists.txt  main.cpp
Celestial mechanics/time/src/: CMakeLists.txt  Time.cpp  Time.hpp
Computational Mathematics/Integration/: a.out  gaussLegendre.hpp  graph.ipynb  main.cpp
Computational Mathematics/Interpolation/: a.out  graphs.ipynb  main.cpp  newton_polynomial.hpp
Computational Mathematics/Multistep Methods/: BDF.cpp  CMakeLists.txt  graphs.ipynb
Computational Mathematics/Nonlinear Equations/: IterationMethod.hpp  NewtonMethod.cpp  SystemIteration.hpp  a.out  graphs.ipynb  iteration.cpp  system.cpp
Computational Mathematics/Numerical Differentiation/: a.out  graphs.ipynb  main.cpp  num_diff.cpp  num_diff.hpp  num_diff_raw.cpp  Численное дифференцирование.ipynb
Computational Mathematics/Runge-Kutta Methods/: CMakeLists.txt  RK4.cpp  graphs.ipynb
Computational Mathematics/Runge-Kutta Methods/tests/: CMakeLists.txt
Computational Mathematics/Runge-Kutta Methods/tests/classicRungeKutta/: test_1.cpp  test_2.cpp
Computational Mathematics/Runge-Kutta Methods/tests/explicitRungeKutta/: test_1.cpp  test_2.cpp  test_3.cpp
Computational Mathematics/Spline/: a.out  cubic_spline.hpp  graphs.ipynb  main.cpp
(+16 files in other folders)
